@@ -1,41 +1,45 @@
 package sypztep.penomior;
 
-import eu.midnightdust.lib.config.MidnightConfig;
+
+import me.shedaniel.autoconfig.ConfigData;
+import me.shedaniel.autoconfig.annotation.Config;
+import me.shedaniel.autoconfig.annotation.ConfigEntry;
+import me.shedaniel.cloth.clothconfig.shadowed.blue.endless.jankson.Comment;
 
 import java.util.Arrays;
 import java.util.List;
-
-public class ModConfig extends MidnightConfig {
-    @Comment(centered = true)
-    public static Comment iframeConfig;
-    @Entry
+@Config(name = Penomior.MODID)
+public class ModConfig implements ConfigData {
+    @Comment("Excluded the damage intake that by-pass Iframe")
+    @ConfigEntry.Category("gameplay")
     public static List<String> dmgReceiveExcludedEntities = Arrays.asList(
             "minecraft:slime", "minecraft:magma_cube"
     );
-    @Entry
-    public static List<String> attackExcludedEntities = Arrays.asList(
+    @Comment("Excluded the Entities that by-pass Iframe")
+    @ConfigEntry.Category("gameplay")
+    public static List<String> attackExcludedEntities = List.of(
             "minecraft:warden"
     );
-
-    @Entry
+    @ConfigEntry.Category("gameplay")
+    @Comment("How weak a player's attack can be before it gets nullified, from 0 (0%, cancels multiple attacks on the same tick) to 1 (100%, players cannot attack), or -0.1 (disables this feature)")
     public static float attackCancelThreshold = 0.15f;
-    @Entry
+    @ConfigEntry.Category("gameplay")
+    @Comment("How weak a player's attack can be before the knockback gets nullified, from 0 (0%, cancels multiple attacks on the same tick) to 1 (100%, no knockback), or -0.1 (disables this feature)")
     public static float knockbackCancelThreshold = 0.75f;
-    @Entry
-    public static boolean refineItemUnbreak = false;
-    @Entry
+    @Comment("How many ticks of i-frames does an entity get when damaged, from 10 (default) 0.5 sec, to 2^31-1 (nothing can take damage)")
+    @ConfigEntry.Category("gameplay")
     public static int iFrameDuration = 10;
-    @Comment(centered = true)
-    public static Comment combatConfig;
-    @Entry
+    @ConfigEntry.Category("refinement")
+    public static boolean refineItemUnbreak = false;
+
+    @ConfigEntry.Category("combat")
     public static boolean backattack = true;
-    @Comment(centered = true)
-    public static Comment featureConfig;
-    @Entry public static boolean missingArrowPassthough = true;
-    @Entry public static boolean playerstatsInfo = true;
-
-
-    static {
-        MidnightConfig.init(Penomior.MODID, ModConfig.class);
-    }
+    @ConfigEntry.Category("feature")
+    public static boolean inDev = false;
+    @ConfigEntry.Category("feature-client")
+    public static boolean missingIndicator = true;
+    @ConfigEntry.Category("feature-client")
+    public static boolean damageIndicator = true;
+    @ConfigEntry.Category("feature-client")
+    public static boolean missingArrowPassthough = true;
 }
